Mutating-Policy/Default-Resource-Limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-default-resources
spec:
  rules:
  - name: set-default-resources
    match:
      resources:
        kinds:
        - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - (name): "*"
            resources:
              limits:
                +(memory): "256Mi"
                +(cpu): "500m"
              requests:
                +(memory): "128Mi"
                +(cpu): "250m"
